# Bootcamp

./: .gitignore  GitBasics
.github/workflows/: unittest.yml
CMAKE/: Example
CMAKE/practice/: CMakeLists.txt
CMAKE/practice/include/: add.h  sub.h
CMAKE/practice/lib/: sub.cpp
CMAKE/practice/src/: add.cpp  main.cpp
CMAKE/practice/sub/: CMakeLists.txt  subt.cpp
CMAKE/practice/sub/include/: subt.h
Documentation/: Notes.txt  cars.py  example.py
Documentation/sphinx-docs/: conf.py  index.rst
UnitTest/: names.csv  names.py
UnitTest/.github/workflows/: unittest.yml
VHDL/VHDL Basics/: .~lock.VHDL Basics.odt#  VHDL Basics.odt
VSCode/: main  main.c
VSCode/practice/: a.out  add.cpp  add.h  main.cpp  makefile
Vivado/: SVTestbenches.md  assembly cheat.odt
Vivado/practice/: practice.xpr  test.tcl
Vivado/practice/practice.srcs/sources_1/new/: practice.sv
files/: Linux
python/: VirEnvExp  csv_parser.py  data.csv  example.py  math_practice.py  test.py
python/hangman/: HangmanGame.py
